tests/ui/basic/logical_or_type_error.rs
use metamatch::eval;

// Logical OR with non-bool
fn main() {
    eval! {
        false || 42
    };
}
